src/objects/loan__Bank_Account__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Card_Details__c</fullName>
        <label>Card Number</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>CVV__c</fullName>
        <label>Security Code</label>
        <length>3</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Expiry_Month__c</fullName>
        <label>Expiry Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiry_Year__c</fullName>
        <label>Expiry Year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__ACH_Code__c</fullName>
        <label>ACH Code</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Saving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Account_Usage__c</fullName>
        <label>Account Usage</label>
        <picklist>
            <picklistValues>
                <fullName>Investor Trust Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections Trust Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance Trust Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Withholding Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borrower/Investor Account</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>loan__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bank Accounts</relationshipLabel>
        <relationshipName>Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>loan__Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bank Accounts</relationshipLabel>
        <relationshipName>Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Routing_Number__c</fullName>
        <inlineHelpText>This is a nine digit number used to identify the financial institution in a transaction.</inlineHelpText>
        <label>Routing Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Signature_Line__c</fullName>
        <label>Signature Line</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Dishonor_Fee_Income_GLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dishonor Fee Income GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Bank Accounts (Dishonor Fee Income GLA)</relationshipLabel>
        <relationshipName>Bank_Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan_ffa__FFA_Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FFA Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Bank Accounts</relationshipLabel>
        <relationshipName>Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Late_Fee_Income_GLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Late Fee Income GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Bank Accounts (Late Fee Income GLA)</relationshipLabel>
        <relationshipName>Bank_Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Origination_Fee_Income_GLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Origination Fee Income GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Bank Accounts (Origination Fee Income GLA)</relationshipLabel>
        <relationshipName>Bank_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Service_Fee_Income_GLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Fee Income GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Bank Accounts</relationshipLabel>
        <relationshipName>Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Tax_Withholding_GLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Withholding GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Bank Accounts (Tax Withholding GLA)</relationshipLabel>
        <relationshipName>Bank_Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Account_Age__c</fullName>
        <label>Account Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Allow_for_Direct_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow for Direct Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Branch_Code__c</fullName>
        <label>Branch Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Savings_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Savings_No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Savings_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Savings Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Savings_Pensions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Savings Pensions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Working_Place_Type__c</fullName>
        <label>Working Place Type</label>
        <picklist>
            <picklistValues>
                <fullName>State employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Bank Account</label>
    <nameField>
        <displayFormat>BA-{00000}</displayFormat>
        <label>Bank Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>